# yafowil.widget.wysihtml5

./: .gitignore  CHANGES.rst  HISTORY.rst  LICENSE.rst  Makefile  README.rst  base.cfg  buildout.cfg  mxmake.yaml  package.json  pyproject.toml  setup.py
.github/workflows/: test_py.yaml
js/: karma.conf.js  rollup.conf.js
js/src/: bundle.js  widget.js
scripts/: clean.sh  coverage.sh  install.sh  karma.sh  rollup.sh  test.sh
scss/: widget.scss
src/yafowil/widget/wysihtml5/: __init__.py  example.py  tests.py  widget.py  widget.rst  yafowil.widget.wysihtml5.js  yafowil.widget.wysihtml5.js.map  yafowil.widget.wysihtml5.min.js  yafowil.widget.wysihtml5.min.js.map
src/yafowil/widget/wysihtml5/resources/: widget.css  widget.js  widget.min.js
src/yafowil/widget/wysihtml5/resources/bootstrap3-wysihtml5/: readme.md  wysiwyg-color.css
