[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafowil.widget.wysihtml5"
version = "2.0.dev0"
description = "wysihtml5 richtext widget for YAFOWIL with bootstrap integration"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "yafowil>2.1.99",
]

[project.optional-dependencies]
test = [
    "lxml",
    "pytest",
]

[project.entry-points."yafowil.plugin"]
register = "yafowil.widget.wysihtml5:register"
example = "yafowil.widget.wysihtml5.example:get_example"

[tool.zest-releaser]
create-wheel = true
